--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
 
     <script>
+        // Adding functionality
         function addName() {
             let input = document.getElementById("nameInput");
             let name = input.value.trim();
